--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "^6.2.0 || ^8.0.0"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.1",
+    "@babel/eslint-parser": "^7.18.2",
     "eslint-plugin-vue": "^5.1.0"
   }
 }
