--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/vuejs/eslint-plugin-vue-libs#readme",
   "peerDependencies": {
-    "eslint": "^6.2.0 || ^8.0.0"
+    "eslint": "^8.0.0"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.18.2",
